--- a/index.ipynb
+++ b/index.ipynb
@@ -3271,7 +3271,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    list=[]\n",
     "    for i in steps\n",
-    "    \n",
+    "    list.append\n",
     "        "
    ]
   },
