Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3270,7 +3270,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    list=[]\n",
-    "    for i in steps:\n",
+    "    for i in range(steps):\n",
     "        list.append(updated_m(m, learning_rate, cost_curve_slope))\n",
     "        return list"
    ]
