--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -3274,7 +3274,7 @@
     "        current_cost_slope=slope_at(x_values, y_values, current_m, b)\n",
     "        current_rss=residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        list.append({'m':current_m,'rss':current_rss,'slope':current_cost_slope})\n",
-    "        current_m=updated_m(current_m, learning_rate, current_cos)\n",
+    "        current_m=updated_m(current_m, learning_rate, )\n",
     "        return list"
    ]
   },
